--- a/Pages/ClientRegistration.razor
+++ b/Pages/ClientRegistration.razor
@@ -485,7 +485,7 @@
     
     private List<RegistrationStep> registrationSteps = new()
     {
-        new RegistrationStep { Number = 1, Title = "Личные данные" },
+        new RegistrationStep { Number = 1, Title = "Личные данные *" },
         new RegistrationStep { Number = 2, Title = "Адрес" },
         new RegistrationStep { Number = 3, Title = "Дополнительно" }
     };
