--- a/Pages/MainLayout.razor
+++ b/Pages/MainLayout.razor
@@ -19,11 +19,15 @@
                             <a class="nav-link" href="/create-art">Генерация</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="/client-registration">Регистрация</a>
+							<a class="nav-link" href="/client-registration">Паспорт</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Пункт 5</a>
+							<a class="nav-link" href="/address-form">Адрес</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/add-bank-card">Добавить карту</a>
+						</li>
+						
 					</ul>
 				</div>
 			</div>
