--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,5 +1,4 @@
-﻿@using Microsoft.Extensions.Logging
-@inject ILogger<Index> Logger
+﻿@inject ILogger<Index> Logger
 
 @page "/"
 @layout MainLayout
