--- a/Pages/RegisterComponent.razor
+++ b/Pages/RegisterComponent.razor
@@ -3,9 +3,12 @@
 @using System.ComponentModel.DataAnnotations
 @using BookMoney.Attributes
 @using BookMoney.Services
+@using CSharpFunctionalExtensions
 @using Microsoft.AspNetCore.Components.Forms
 @inject IJSRuntime JSRuntime
 @inject ILoginService _context;
+@inject NavigationManager _navigation;
+@inject ClientStateService _clientState;
 
 <style>
     .registration-card {
@@ -74,14 +77,29 @@
 
     private async Task HandleRegistration()
     {
-        var result = await _context.AddLoginAsync(new Models.LoginDBModel
-        { IsActive = false, Login = registrationModel.PhoneNumber, Password = "pass", DateCreate = DateTime.UtcNow });
+        var clientId = await _context.GetIdByPhoneAsync(registrationModel.PhoneNumber);
+
+        if (clientId.HasNoValue)
+        {
+            var result = await _context.AddLoginAsync(new Models.LoginDBModel
+                {
+                    IsActive = false,
+                    Login = registrationModel.PhoneNumber,
+                    Password = "none",
+                    DateCreate = DateTime.UtcNow
+                });
+            clientId = result!.Id;
+        }
 
 
-        if(result?.Id != null)
+        if (clientId.HasValue)
+        {
+            _clientState.SetClientId(clientId.Value);
+            _navigation.NavigateTo("/client-registration");
         // Здесь должна быть ваша логика регистрации
         // Например, отправка номера телефона для верификации
-            await JSRuntime.InvokeVoidAsync("alert", $"Регистрация для: {registrationModel.PhoneNumber}");
+         //   await JSRuntime.InvokeVoidAsync("alert", $"Регистрация для: {registrationModel.PhoneNumber}");
+        }
     }
 
     public class RegistrationModel
