--- a/Pages/ClientRegistration.razor
+++ b/Pages/ClientRegistration.razor
@@ -2,8 +2,14 @@
 @layout MainLayout
 
 @using System.ComponentModel.DataAnnotations
+@using BookMoney.Services
 @using Microsoft.AspNetCore.Components.Forms
+
 @inject IJSRuntime JSRuntime
+@inject ClientStateService _clientState;
+@inject NavigationManager _navigation;
+
+@implements IDisposable
 
 <style>
     .step-indicator {
@@ -117,7 +123,7 @@
                 <div class="card-header bg-primary text-white py-3">
                     <div class="d-flex justify-content-between align-items-center">
                         <h2 class="h4 mb-0">
-                            <i class="fas fa-user-tie me-2"></i>Анкета клиента
+                            <i class="fas fa-user-tie me-2">Анкета клиента @clientId</i>
                         </h2>
                         <span class="badge bg-light text-primary fs-6">Шаг @currentStep из 3</span>
                     </div>
@@ -570,6 +576,7 @@
     private string selfieInput = "selfieInput";
     private string registration = "registration";
     private string registrationInput = "registrationInput";
+    private Guid? clientId;
 
     private List<RegistrationStep> registrationSteps = new()
     {
@@ -577,6 +584,15 @@
         new RegistrationStep { Number = 2, Title = "Документы" },
         new RegistrationStep { Number = 3, Title = "Паспортные данные" }
     };
+
+    protected override void OnInitialized()
+    {
+        clientId = _clientState.CurrentClientId;
+        if (clientId == null)
+            _navigation.NavigateTo("/registration");
+
+        _clientState.OnStateChanged += StateHasChanged;
+    }
 
     private void NextStep()
     {
@@ -778,5 +794,10 @@
     {
         public int Number { get; set; }
         public string Title { get; set; } = string.Empty;
+    }
+
+    public void Dispose()
+    {
+        _clientState.OnStateChanged -= StateHasChanged;
     }
 }
